# Bank_Customer_Attrition_Prediction_Service

./: README.md  pyproject.toml
.github/workflows/: main.yml
data/transformed/: label_encoded_churn_data.parquet  validated_churn_data.parquet
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  03_transform_features_targets.ipynb  04_visualize_training_data.ipynb  05_baseline_model.ipynb  06_xgboost_model.ipynb  07_lightgbm_model.ipynb  08_lightgbm_model_with_feature_encoding.ipynb  09_lightgbm_model_with_hyperparameter_tuning.ipynb
src/: data_split.py  frontend.py  model.py  paths.py  plot.py
