[tool.poetry]
name = "bank-customer-attrition-prediction"
version = "0.1.0"
description = ""
authors = ["karthikeya pervela <69100096+pkarthikeya1@users.noreply.github.com>"]
readme = "README.md"
packages = [
            {include = "src"}
            ]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.32.2"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
